# thrift_cron

./: .gitignore  Cargo.toml  README.md  prefix.log.2025-07-23  rpc.thrift  test_email.py
src/: bad_words.rs  db_interactions.rs  helper_functions.rs  imap_interactions.rs  main.rs  py_types.rs  types.rs
src/thrift/: autogen.rs  mod.rs  rpc.rs
